clusters/constellation/apps/potber/potber-auth/production/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: potber-auth-production
  namespace: potber
spec:
  selector:
    app: potber-auth-production
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
